# mesh-lod-tool

./: .gitignore  CMakeLists.txt  README.md  理解.md  给我自己看的说明.md
report/: 01_literature_review.md  02_technical_report.md  03_reflection.md  ppt_outline.md  提交说明.md  素材清单.md
report/word/: 00_课程大作业提交说明.docx  01_文献调研报告.docx  03_未来工作展望与个人感想.docx  04_素材清单.docx
result/report_assets/: README.md
result/web/tables/: empire_children_e259041b8b89_stats.csv  girl_118fd17336c9_stats.csv  horse_3d_model_4b0c341d9387_stats.csv  indoor_plant_02_eafb7985f897_stats.csv  tv_furniture_752d373f3c76_stats.csv
src/: main.cpp
src/mesh/: Mesh.h  MeshOptimizerSimplifier.cpp  ObjIO.cpp  ObjIO.h  PrimitiveMeshes.cpp  PrimitiveMeshes.h  Simplifier.cpp  Simplifier.h
src/viewer/: Viewer.cpp  Viewer.h
web/: package-lock.json  package.json  server.js
web/public/: index.html  main.js  styles.css
